# nthlayer

./: .env.example  .env.mock  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  ARCHITECTURAL_ANALYSIS.md  ATTRIBUTION.md  BACKSTAGE_PLUGIN_SPEC.md  BEADS_SETUP_COMPLETE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DASHBOARD_AUDIT_RESULTS.md  DEPENDENCY_DISCOVERY_SPEC.md  DRIFT_DETECTION_SPEC.md  Dockerfile  EXECUTE_MIGRATION.md  FOUNDATION_COMPLETE.md  GETTING_STARTED.md  LICENSING_COMPLIANCE.md  MCP_SERVER_SPEC.md  METRIC_DISCOVERY_POC.md  MIGRATION.md  Makefile  README.md  ROADMAP_MIGRATION_PLAN.md  ROADMAP_MIGRATION_SUMMARY.md  SDK_INTEGRATION_GUIDE.md  TOOL_COMPARISON_ANALYSIS.md  UAT.md  action.yml  add_demo_datasource.py  alert_stats.json  audit_dashboards.py  compare_old_vs_sdk.py  docker-compose.yml  fix_all_dashboard_queries.py  fix_all_dashboards.py  fix_analytics_dashboard.py  (+27 more)
.agents/: README.md
.agents/decisions/: 001-sdk-integration-approach.md
.agents/knowledge/: dashboard-troubleshooting.md
.agents/sessions/: 2025-12-02-week2-dashboard-fixes.md
.beads/: README.md  config.yaml  github_sync.json  issues.jsonl
.beads.archived/: metadata.json
.beads/features/: access-control-security.json  add-apm-tracing-configuration.json  add-elasticsearch-technology-template.json  add-gdpr-data-handling-configurations.json  add-kafka-technology-template.json  add-log-aggregation-configuration.json  add-mongodb-technology-template.json  add-rabbitmq-technology-template.json  ai-enhanced-runbook-generation.json  ai-ml-service-type-support.json  ai-powered-nthlayer.json  anomaly-explanation.json  approval-workflows.json  backstage-catalog-reader.json  backstage-developer-portal-integration.json  backstage-developer-portal-plugin.json  backstage-plugin-for-nthlayer.json  backstage-plugin.json  build-audit-logging-for-policies.json  build-condition-evaluator-engine.json  build-dependency-graph-visualization.json  build-interactive-demo-user-configurable-service-generator.json  build-prometheus-integration-for-sli-metrics.json  build-reliability-scorecard-calculator.json  build-war-room-automation.json  cardinality-analysis-in-discovery.json  chunkhound-audit-configuration-validation-epic.json  chunkhound-audit-improvements.json  chunkhound-audit-orchestrator-testability-resilience.json  chunkhound-audit-output-determinism-epic.json  chunkhound-audit-secret-backend-security-hardening.json  chunkhound-audit-serviceorchestrator-performance.json  chunkhound-audit-template-registry-auto-registration.json  chunkhound-audit-tier-system-single-source-of-truth.json  chunkhound-audit-unified-error-handling-epic.json  cli-ux-enhancement-with-charm-python-hybrid.json  compliance-governance.json  configurable-for-duration-in-alerts.json  configure-backup-and-dr-policies.json  configure-resource-quotas.json  (+124 more)
.beads/issues/: add-cli-commands-for-error-budget.json  add-comprehensive-tech-stack-and-component-documentation.json  add-configuration-validation-url-format-env-names.json  add-deployment-notification-system.json  add-github-action-for-auto-updating-demo-gifs.json  alert-fragile-queries.json  (+87 more)
.claude/: ralph-prompt.md
.github/: dependabot.yml
alembic/: env.py
demo/: DASHBOARD_IMPORT_GUIDE.md  DEMO_VALUE_PROP.md  GRAFANA_CLOUD_SETUP.md  README.md  ZERO_COST_SETUP.md  _paths.sh  _start_lock.sh  demo.sh  render_explanation.py  scenario-cascading-failure.yaml  scenario-runner.py  verdict-feed.sh
docs/: 404.html  ALERTS.md  CHANGES.md  COSTOPTIMISATION.md  CUSTOM_TEMPLATES.md  DEVELOPMENT.md  DIAGRAMS.md  ENVIRONMENTS.md  IMPROVEMENTS.md  INDEX.md  MOCK_API_FIDELITY.md  OBSERVABILITY.md  SCHEMA.md  TEMPLATES.md  architecture.md  backstage-integration.md  conventions.md  demo-comparison.html  generate-capability-audit.md  golden-principles.md  index.html  integration-testing.md  metrics-contract.md  mocking-classification.md  quality.md  release-runbook.md  roi-calculator.html  script.js  sitemap.xml  social-media-posts.md  style.css  testing.md
docs-site/: architecture.md  demo.md  index.md
documentation/: CUSTOM_TEMPLATES.md  DEVELOPMENT.md  DIAGRAMS.md  ENVIRONMENTS.md  IMPROVEMENTS.md  MOCK_API_FIDELITY.md  OBSERVABILITY.md  SCHEMA.md  TEMPLATES.md
examples/: mock_prometheus.py  policies.yaml
meta-package/: CHANGELOG.md  README.md  pyproject.toml
plans/: README.md  tech-debt.md
presentations/: LOGO_SETUP.md  NEVERSINK_ENHANCEMENTS.md  README.md  THEME_CONFIG.md  package.json
scripts/: create-audit-issue.sh  migrate_beads.py  prune_roadmap.py  push_demo_metrics.py  regenerate_hybrid_dashboards.py  sync_awesome_alerts.py  sync_beads_to_github.py  test_create_schedule.py  test_pagerduty_api.py  try_create_schedule.py  try_pagerduty_api.py  update_beads.py  validate_dashboard_metrics.py
specs/: nthlayer-code-review-audit.md  nthlayer-harness-engineering.md
test/: _three_tier_lib.sh  alertmanager.yml  docker-compose.yml  e2e-test.sh  fake-service.py  integration-chain.sh  integration-three-tier.sh  learn-recommendations-integration.sh  prometheus.yml  test_demo_paths.sh  test_demo_start_lock.sh  test_jmy18_smoke.py  three_tier_assertions.py  webhook-receiver.py
tests/: conftest.py  mock_server.py  test_alert_pipeline.py  test_alerting_config.py  test_alertmanager.py  test_alerts.py  test_api_auth.py  test_api_reconcile.py  test_backstage_generator.py  test_budget_policy.py  test_cache.py  test_cli_alerts.py  test_cli_apply.py  test_cli_blast_radius.py  test_cli_dashboard.py  test_cli_dashboard_validate.py  test_cli_dependencies.py  test_cli_deploy.py  test_cli_deps.py  test_cli_environments.py  test_cli_formatters.py  test_cli_generate.py  test_cli_generate_alerts.py  test_cli_generate_loki.py  test_cli_identity.py  test_cli_lint.py  test_cli_pagerduty.py  test_cli_plan.py  test_cli_portfolio.py  test_cli_setup.py  test_cli_slo.py  test_cli_templates.py  test_cli_ux.py  test_cli_validate.py  test_cli_validate_metadata.py  test_cli_validate_slo.py  test_cli_validate_spec.py  test_cli_verify.py  test_clients.py  test_cloudwatch.py  (+102 more)
(+778 files in other folders)
