[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nthlayer"
version = "0.1.0a15"
description = "NthLayer - The Missing Layer of Reliability"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grafana-foundation-sdk>=0.0.11",
    "fastapi>=0.111.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<0.41",
    "mangum>=0.17.0,<0.20.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.2.1,<3.0.0",
    "sqlalchemy>=2.0.30,<3.0.0",
    "alembic>=1.13.1,<2.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "redis>=5.0.4,<8.0.0",
    "httpx>=0.27.0,<0.29.0",
    "pagerduty>=6.0.0,<7.0.0",
    "aioboto3>=12.3.0,<16.0.0",
    "boto3>=1.34.0,<2.0.0",
    "langgraph>=1.0.0,<2.0.0",
    "langchain>=0.3.0,<0.4.0",
    "structlog>=24.1.0,<25.0.0",
    "orjson>=3.10.0,<4.0.0",
    "python-json-logger>=2.0.7,<3.0.0",
    "tenacity>=8.2.3,<10.0.0",
    "circuitbreaker>=2.0.0,<3.0.0",
    "aws-xray-sdk>=2.12.0,<3.0.0",
    "PyJWT[crypto]>=2.8.0,<3.0.0",
    "jwcrypto>=1.5.6,<2.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "rich>=13.7.0,<14.0.0",
    "rich-argparse>=1.4.0,<2.0.0",
    "questionary>=2.0.0,<3.0.0",
    # Drift detection dependencies
    "scipy>=1.11.0,<2.0.0",
    "numpy>=1.24.0,<3.0.0",
    # Dependency discovery
    "cachetools>=5.3.0,<6.0.0",
    "opentelemetry-semantic-conventions>=0.60b1",
]

[project.scripts]
nthlayer = "nthlayer.demo:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<10.0.0",
    "pytest-asyncio>=0.23.0,<2.0.0",
    "pytest-cov>=5.0.0,<8.0.0",
    "respx>=0.21.0,<0.23.0",
    "ruff>=0.4.0,<0.15.0",
    "mypy>=1.10.0,<1.20.0",
    "types-redis>=4.6.0",
    "types-requests>=2.31.0",
    "types-python-dateutil>=2.8.19",
    "types-PyYAML>=6.0.0",
    "anyio>=4.3.0,<5.0.0",
    "aiosqlite>=0.20.0,<1.0.0",
    "greenlet>=3.0.0,<4.0.0",
    "kubernetes>=28.0.0,<36.0.0",  # For testing K8s provider
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocs-minify-plugin>=0.8.0",
]
drift-ml = [
    # Future ML-enhanced drift detection
    "scikit-learn>=1.3.0,<2.0.0",
]
kubernetes = [
    # Kubernetes dependency discovery
    "kubernetes>=28.0.0,<36.0.0",
]
zookeeper = [
    # Zookeeper dependency discovery
    "kazoo>=2.9.0,<3.0.0",
]
etcd = [
    # etcd dependency discovery
    "etcd3>=0.12.0,<1.0.0",
]
service-discovery = [
    # All service discovery providers (Consul uses httpx, already included)
    "kazoo>=2.9.0,<3.0.0",
    "etcd3>=0.12.0,<1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
addopts = "-ra -q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = [
    "B008",  # Depends() in function defaults - standard FastAPI pattern
    "E402",  # Module level import not at top - needed for sys.modules mocking in tests
]

[tool.sloppy]
# Sloppylint configuration - AI code quality checker
ignore = [
    "tests/*",
    "archive/*",
    "scripts/*",
    "src/nthlayer/workflows/*",  # langgraph incompatible with Python 3.14
]
disable = [
    "debug_print",         # CLI uses print() for user output
    "magic_number",        # Too noisy, handled by code review
    "hallucinated_import", # False positives on relative imports
    "wrong_stdlib_import", # False positives on optional deps (hvac, azure, gcp)
    "dead_code",           # Too many false positives on class methods
    "duplicate_code",      # Function structure similarity != duplication
    "overlong_line",       # PromQL queries are intentionally long
]
severity = "high"  # Only report critical and high issues
max-score = 500    # CI threshold
