[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nthlayer"
version = "0.1.0a19"
description = "NthLayer - The Missing Layer of Reliability"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nthlayer-common>=0.1.2",
    "grafana-foundation-sdk>=0.0.11",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.2.1,<3.0.0",
    "httpx>=0.27.0,<0.29.0",
    "pagerduty>=6.0.0,<7.0.0",
    "structlog>=24.1.0,<25.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "rich>=13.7.0,<15.0.0",
    "rich-argparse>=1.4.0,<2.0.0",
    "questionary>=2.0.0,<3.0.0",
    # Dependency discovery
    "cachetools>=5.3.0,<7.0.0",
    "opentelemetry-semantic-conventions>=0.60b1",
]

[project.scripts]
nthlayer = "nthlayer.demo:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<10.0.0",
    "pytest-asyncio>=0.23.0,<2.0.0",
    "pytest-cov>=5.0.0,<8.0.0",
    "respx>=0.21.0,<0.23.0",
    "ruff>=0.4.0,<0.15.0",
    "mypy>=1.10.0,<1.20.0",
    "types-requests>=2.31.0",
    "types-python-dateutil>=2.8.19",
    "types-PyYAML>=6.0.0",
    "anyio>=4.3.0,<5.0.0",
    "kubernetes>=28.0.0,<36.0.0",  # For testing K8s provider
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocs-minify-plugin>=0.8.0",
]
kubernetes = [
    # Kubernetes dependency discovery
    "kubernetes>=28.0.0,<36.0.0",
]
zookeeper = [
    # Zookeeper dependency discovery
    "kazoo>=2.9.0,<3.0.0",
]
etcd = [
    # etcd dependency discovery
    "etcd3>=0.12.0,<1.0.0",
]
service-discovery = [
    # All service discovery providers (Consul uses httpx, already included)
    "kazoo>=2.9.0,<3.0.0",
    "etcd3>=0.12.0,<1.0.0",
]
aws = [
    # AWS Secrets Manager backend (nthlayer.config.secrets.backends.AWSSecretBackend)
    "boto3>=1.34.0,<2.0.0",
]

[tool.uv.sources]
nthlayer-common = { path = "../nthlayer-common", editable = true }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
addopts = "-ra -q"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "smoke: CLI smoke tests (run with make smoke)",
    "synology: Tests requiring Synology Prometheus/Grafana",
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true

# Optional dependencies — not installed in dev/CI unless extras are used
[[tool.mypy.overrides]]
module = [
    "kubernetes.*",           # [kubernetes] optional extra
    "kazoo.*",                # [zookeeper] optional extra
    "etcd3.*",                # [etcd] optional extra
    "boto3.*",                # [aws] optional extra
    "hvac.*",                 # HashiCorp Vault (secrets backend, optional)
    "azure.*",                # Azure Key Vault (secrets backend, optional)
    "google.cloud.*",         # GCP Secret Manager (secrets backend, optional)
    "doppler.*",              # Doppler (secrets backend, optional)
    "pagerduty.*",            # No type stubs available
    "grafana_foundation_sdk.*",  # No type stubs available
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = [
    "E402",  # Module level import not at top - needed for sys.modules mocking in tests
    "E501",  # Line too long - PromQL queries, SARIF rules, metric names are intentionally >100 chars
]

[tool.sloppy]
# Sloppylint configuration - AI code quality checker
ignore = [
    "tests/*",
    "archive/*",
    "scripts/*",
]
disable = [
    "debug_print",         # CLI uses print() for user output
    "magic_number",        # Too noisy, handled by code review
    "hallucinated_import", # False positives on relative imports
    "wrong_stdlib_import", # False positives on optional deps (hvac, azure, gcp)
    "dead_code",           # Too many false positives on class methods
    "duplicate_code",      # Function structure similarity != duplication
    "overlong_line",       # PromQL queries are intentionally long
]
severity = "high"  # Only report critical and high issues
max-score = 500    # CI threshold
